--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 
     <section>
       <form>
-
+        <input type="text" name="username" placeholder="username">
+        <input type="text" name="email" placeholder="email">
+        <input type="password" name="password" placeholder="password">
+        <input type="text" name="telephone" placeholder="telephone">
+        <input type="text" name="slug" placeholder="profile slug">
       </form>
     </section>
     <script type="text/javascript" src="javascript.js"></script>
   </body>
 </html>
+
